<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="hold_on_and_say_something">按住&#160;&#160;说话</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="release_and_finish">松开&#160;&#160;结束</string>
    <string name="scroll_to_up_and_cancel">手指上滑，取消发送</string>
    <string name="release_and_cancel">松开手指，取消发送</string>
    <string name="last_time_to_say">还可以说%1$ds</string>
    <string name="title_activity_gif_view">GifViewActivity</string>
    <string name="title_activity_image_brower">ImageBrowerActivity</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="title_activity_recycle_view">RecycleViewActivity</string>
    <string name="title_activity_count_down">CountDownActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="app_name">云客服SDK</string>
    <string name="remove">移除</string>
    <!-- 欢迎界面 -->
    <string name="sdk_name">逸创云客服</string>
    <string name="home_to_use_sdk">欢迎使用逸创云客服SDK</string>
    <string name="home_to_remind">以下是展示逸创云客服SDK功能的按钮</string>
    <string name="home_help_button">帮助中心</string>
    <string name="home_feedback_button">反馈问题</string>
    <string name="home_look_feedback">查看反馈</string>
    <string name="title_activity_help_center">HelpCenterActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>
    <string name="title_activity_look_feed_back">LookFeedBackActivity</string>
    <string name="net_enable">当前网络未连接</string>
    <string name="server_unsul">服务器异常</string>
    <string name="document_content">文档内容</string>
    <string name="website_brower">网页浏览</string>
    <string name="setting_su">设置成功</string>
    <string name="scan_pic">预览</string>
    <string name="downing_ok" translatable="false">下载成功,文件保存在：\n%1$s</string>
    <string name="down_attach" translatable="false">是否下载附件%1$s</string>
    <string name="downing" translatable="false">开始下载...</string>
    <string name="downed" translatable="false">已经下载</string>
    <string name="pull_update" translatable="false">向下拖动进行刷新</string>
    <string name="reless_update" translatable="false">松开进行刷新</string>
    <string name="update_ing" translatable="false">正在刷新&#8230;</string>
    <string name="up_update_date" translatable="false">上次刷新 ：%1$s</string>
    <string name="order_closed">该问题已关闭</string>
    <!-- help_center -->
    <string name="connect_us">联系我们</string>
    <string name="area_list">分区列表</string>
    <string name="search">搜索</string>
    <string name="search_hint">请输入搜索内容</string>

    <!-- feed_back -->
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
    <string name="edittext_hint">请输入问题</string>

    <!-- look_feed_back -->
    <string name="feed_back_list">反馈列表</string>
    <string name="title_activity_feed_back_details">FeedBackDetailsActivity</string>

    <!-- others -->

    <string name="just">刚刚</string>
    <string name="_day">%1$s天前</string>
    <string name="_second">%1$s秒前</string>
    <string name="_minite">%1$s分钟前</string>
    <string name="_hour">%1$s小时前</string>

    <!-- feed back details -->

    <string name="send">发送</string>
    <string name="input_please">请输入问题</string>
    <string name="input_content">请输入内容</string>
    <string name="title_activity_help_center_type">HelpCenterTypeActivity</string>
    <string name="title_activity_help_center_type_details">HelpCenterTypeDetailsActivity</string>
    <!-- feed back -->
    <string name="submit_success">提交成功</string>
    <string name="order_title">来自%1$s的工单请求</string>
    <string name="uploading">上传中&#8230;</string>
    <string name="upload_success">上传成功</string>
    <string name="title_activity_push_setting">PushSettingActivity</string>
    <string name="title_activity_link_url">LinkUrlActivity</string>
    <string name="loading" translatable="false">加载数据中......</string>
    <string name="no_datas" translatable="false">没有更多数据了</string>
    <string name="message_detail">详细信息</string>
    <string name="ticket">工单</string>
    <string name="left">左图</string>
    <string name="right">右图</string>

</resources>