<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/title_bar_bg" >

        <ImageView
            android:id="@+id/return_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/back_img_bg"
            android:visibility="visible" />

        <TextView
            android:id="@+id/feed_back_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/pending_eight"
            android:background="@drawable/text_view_bg"
            android:padding="@dimen/pending_eight"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_xh_size"
            android:visibility="gone" />

        <TextView
            android:id="@+id/feed_back_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/pending_eight"
            android:padding="@dimen/pending_eight"
            android:text="@string/submit"
            android:textColor="@drawable/text_bg"
            android:textSize="@dimen/text_xh_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/home_feedback_button"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_xh_size" />
    </RelativeLayout>

    <EditText
        android:id="@+id/feed_back_content_et"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_layout"
        android:layout_below="@+id/top_layout"
        android:background="@null"
        android:gravity="top|left"
        android:hint="@string/edittext_hint"
        android:padding="@dimen/pending_eight" />

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="@dimen/pending_eight" >

        <ImageView
            android:id="@+id/feed_back_choice_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/choice_img_source" />

        <LinearLayout
            android:id="@+id/feed_back_image_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/pending_four"
            android:visibility="gone" >
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>