<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/title_bar_bg" >

        <ImageView
            android:id="@+id/return_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:src="@drawable/back_img_bg" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/return_img"
            android:layout_toLeftOf="@+id/message_detail"
            android:layout_toRightOf="@+id/return_img"
            android:layout_toStartOf="@+id/message_detail"
            android:gravity="start"
            android:singleLine="true"
            android:text="@string/ticket"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_xxh_size" />

        <TextView
            android:id="@+id/message_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/dimen_8dp"
            android:layout_marginRight="@dimen/dimen_8dp"
            android:padding="@dimen/dimen_8dp"
            android:text="@string/message_detail"
            android:textColor="@drawable/text_bg"
            android:textSize="@dimen/text_xh_size" />
    </RelativeLayout>

    <ListView
        android:id="@+id/activity_feed_back_details_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_layout"
        android:layout_below="@+id/top_layout"
        android:background="@android:color/white"
        android:divider="@android:color/white"
        android:listSelector="@android:color/white"
        android:transcriptMode="normal" >
    </ListView>

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <RelativeLayout
            android:id="@+id/send_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eaedf4" >

            <RelativeLayout
                android:id="@+id/send_content_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dimen_2dp"
                android:paddingLeft="@dimen/dimen_4dp"
                android:paddingRight="@dimen/dimen_4dp"
                android:paddingTop="@dimen/dimen_2dp"
                android:visibility="visible" >

                <ImageView
                    android:id="@+id/activity_feed_back_choice_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null"
                    android:padding="@dimen/dimen_4dp"
                    android:src="@drawable/add_img" />

                <TextView
                    android:id="@+id/activity_feed_back_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/dimen_4dp"
                    android:text="@string/send"
                    android:textColor="@drawable/send_text_colordrawable"
                    android:textSize="@dimen/text_h_size" />

                <EditText
                    android:id="@+id/activity_feed_back_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/dimen_2dp"
                    android:layout_marginRight="@dimen/dimen_2dp"
                    android:layout_toEndOf="@+id/activity_feed_back_choice_img"
                    android:layout_toLeftOf="@+id/activity_feed_back_submit"
                    android:layout_toRightOf="@+id/activity_feed_back_choice_img"
                    android:layout_toStartOf="@+id/activity_feed_back_submit"
                    android:background="@drawable/edittext_bg"
                    android:focusable="false"
                    android:hint="@string/input_content"
                    android:padding="@dimen/dimen_8dp"
                    android:singleLine="true" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/image_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/dimen_2dp"
                android:paddingLeft="@dimen/dimen_4dp"
                android:paddingRight="@dimen/dimen_4dp"
                android:paddingTop="@dimen/dimen_2dp"
                android:visibility="gone" >

                <ImageView
                    android:id="@+id/activity_feed_back_select_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:padding="@dimen/dimen_4dp"
                    android:src="@drawable/choice_img_source" />

                <ImageView
                    android:id="@+id/activity_feed_back_back_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:padding="@dimen/dimen_4dp"
                    android:src="@drawable/choice_img_back" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_4dp"
                    android:layout_marginStart="@dimen/dimen_4dp"
                    android:scrollbars="none" >

                    <LinearLayout
                        android:id="@+id/image_container_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/activity_feed_back_replace_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginRight="@dimen/dimen_16dp"
            android:background="@drawable/footer_view_bg"
            android:gravity="center"
            android:paddingBottom="@dimen/dimen_8dp"
            android:paddingTop="@dimen/dimen_8dp"
            android:text="@string/order_closed"
            android:textColor="#8b8b8b"
            android:textSize="@dimen/text_l_size"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>