<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_bar_bg" >

        <ImageView
            android:id="@+id/return_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/back_img_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/help_center_connect_us"
            android:layout_toRightOf="@+id/return_img"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ellipsize="middle"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_xh_size" />
        </LinearLayout>

        <TextView
            android:id="@+id/help_center_connect_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/pending_eight"
            android:text="@string/connect_us"
            android:textColor="@drawable/text_bg"
            android:textSize="@dimen/text_xh_size" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/search_bg"
        android:padding="@dimen/pending_eight" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/user_search_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/pending_eight" >

            <LinearLayout
                android:id="@+id/serch_reminder_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/img_search" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/search"
                    android:textColor="#8e8e93"
                    android:textSize="18sp" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/search_layout_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" >

                <EditText
                    android:id="@+id/search_content_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/search_hint"
                    android:padding="@dimen/pending_two"
                    android:singleLine="true"
                    android:textSize="@dimen/text_l_size" />

                <TextView
                    android:id="@+id/submit_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="2dp"
                    android:text="@string/search"
                    android:textColor="@drawable/search_text_color"
                    android:textSize="16sp" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <ListView
        android:id="@+id/help_center_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:divider="@android:color/white"
        android:listSelector="@android:color/white"
        android:visibility="visible" >
    </ListView>

    <ListView
        android:id="@+id/help_center_search_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:divider="@android:color/white"
        android:listSelector="@android:color/white"
        android:visibility="gone" >
    </ListView>

</LinearLayout>