<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:background="@color/title_bar_bg"
        android:gravity="center"
        android:text="@string/sdk_name"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_xh_size" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:background="#FFFFFF" >

        <LinearLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F2F5F9"
                android:orientation="vertical"
                android:paddingBottom="@dimen/dimen_48dp"
                android:paddingTop="@dimen/dimen_48dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="44dp"
                    android:layout_marginStart="44dp"
                    android:text="@string/home_to_use_sdk"
                    android:textSize="@dimen/text_h_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="44dp"
                    android:layout_marginStart="44dp"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:text="@string/home_to_remind"
                    android:textColor="#45d8d0"
                    android:textSize="@dimen/text_m_size" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/help_center_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/home_selected_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_16dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_32dp"
                    android:layout_marginStart="@dimen/dimen_32dp"
                    android:src="@drawable/help_center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_16dp"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:text="帮助中心"
                    android:textColor="#424345"
                    android:textSize="@dimen/text_xxh_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="44dp"
                    android:layout_marginStart="44dp"
                    android:background="#FFFFFF"
                    android:src="@drawable/help_center"
                    android:visibility="invisible" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginEnd="@dimen/dimen_32dp"
                    android:layout_marginLeft="@dimen/dimen_16dp"
                    android:layout_marginRight="@dimen/dimen_32dp"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:background="#dddddd" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/feed_back_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/home_selected_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_16dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_32dp"
                    android:layout_marginStart="@dimen/dimen_32dp"
                    android:src="@drawable/feed_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_16dp"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:text="反馈问题"
                    android:textColor="#424345"
                    android:textSize="@dimen/text_xxh_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="44dp"
                    android:layout_marginStart="44dp"
                    android:src="@drawable/help_center"
                    android:visibility="invisible" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginEnd="@dimen/dimen_32dp"
                    android:layout_marginLeft="@dimen/dimen_16dp"
                    android:layout_marginRight="@dimen/dimen_32dp"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:background="#dddddd" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/look_feed_back_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/home_selected_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_16dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_32dp"
                    android:layout_marginStart="@dimen/dimen_32dp"
                    android:src="@drawable/look_feed_back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_16dp"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:text="查看反馈"
                    android:textColor="#424345"
                    android:textSize="@dimen/text_xxh_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="44dp"
                    android:layout_marginStart="44dp"
                    android:src="@drawable/help_center"
                    android:visibility="invisible" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginEnd="@dimen/dimen_32dp"
                    android:layout_marginLeft="@dimen/dimen_16dp"
                    android:layout_marginRight="@dimen/dimen_32dp"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:background="#dddddd" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/chat_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/home_selected_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_16dp" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_32dp"
                    android:layout_marginStart="@dimen/dimen_32dp"
                    android:src="@drawable/chat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_16dp"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:text="聊天中心"
                    android:textColor="#424345"
                    android:textSize="@dimen/text_xxh_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="44dp"
                    android:layout_marginStart="44dp"
                    android:src="@drawable/help_center"
                    android:visibility="invisible" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginEnd="@dimen/dimen_32dp"
                    android:layout_marginLeft="@dimen/dimen_16dp"
                    android:layout_marginRight="@dimen/dimen_32dp"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:background="#dddddd" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>